--- a/css/custom.css
+++ b/css/custom.css
@@ -15,6 +15,10 @@ body {
     flex: 1;
 }
 
+.tuto_images {
+    width:70%;
+}
+
 .tg  {border-collapse:collapse;border-spacing:0;}
 
 .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
