--- a/css/custom.css
+++ b/css/custom.css
@@ -22,6 +22,17 @@ body {
     width:70%;
 }
 
+.fixed-icon {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.fixed-icon:hover {
+    transform: translateY(5px);
+}
+
 .tg  {border-collapse:collapse;border-spacing:0;}
 
 .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
